<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    tools:context=".views.main.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/callEmergencyNumber"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:backgroundTint="#4CAF50"
            android:drawableTop="@drawable/ic_call"
            android:padding="50dp"
            android:text="@string/call"
            android:textSize="24sp" />

        <Button
            android:id="@+id/SOS"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:backgroundTint="#D35045"
            android:drawableTop="@drawable/ic_sos"
            android:padding="50dp"
            android:text="@string/sos"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="0.5"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ToDo"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:backgroundTint="#2196F3"
            android:drawableTop="@drawable/ic_todo"
            android:padding="50dp"
            android:text="@string/todo"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Notes"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:backgroundTint="#FFEB3B"
            android:drawableTop="@drawable/ic_notes"
            android:padding="50dp"
            android:text="@string/notes"
            android:textSize="24sp" />

    </LinearLayout>
</LinearLayout>
