<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="30sp"
            android:text="@string/note_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_updated_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="none"
            android:text="Updated on"
            app:layout_constraintStart_toStartOf="@id/note_title"
            app:layout_constraintTop_toBottomOf="@id/note_title" />

        <TextView
            android:id="@+id/note_update_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="none"
            android:text="@string/update_date"
            app:layout_constraintStart_toEndOf="@id/text_updated_on"
            app:layout_constraintTop_toBottomOf="@id/note_title" />

        <TextView
            android:id="@+id/text_updated_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="none"
            android:text="by"
            app:layout_constraintStart_toEndOf="@id/note_update_date"
            app:layout_constraintTop_toBottomOf="@id/note_title" />

        <TextView
            android:id="@+id/note_updated_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="none"
            android:text="@string/updated_by"
            app:layout_constraintStart_toEndOf="@+id/text_updated_by"
            app:layout_constraintTop_toBottomOf="@+id/note_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>